Fixed alignment issue

--- a/src/output.css
+++ b/src/output.css
@@ -618,10 +618,6 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-rows-\[1fr_2fr\] {
-  grid-template-rows: 1fr 2fr;
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -881,10 +877,6 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:flex {
-    display: flex;
-  }
-
   .md\:grid {
     display: grid;
   }
@@ -913,16 +905,16 @@ body {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:flex-col {
     flex-direction: column;
   }
 
   .md\:flex-nowrap {
     flex-wrap: nowrap;
-  }
-
-  .md\:items-center {
-    align-items: center;
   }
 
   .md\:gap-8 {
